--- a/#2.md
+++ b/#2.md
@@ -1,3 +1,4 @@
-I have previously never used github so the learning curve has been immense.
-For example the creating pull requests, creating README files, and messing with the user dashboard. 
-I am still confused about the pull request however as it would not allow me to create. I searched online and still could not figure it out.
+# 1. I have previously never used github so the learning curve has been immense.
+## 2 .For example the creating pull requests, creating README files, and messing with the user dashboard. 
+### 3. I am still confused about the pull request however as it would not allow me to create. I searched online and still could not figure it out.
+I look forward to learning more about this system. 
